--- a/TODO
+++ b/TODO
@@ -2,8 +2,9 @@ TODO for 06/08/2019:
 
 - Make sure PyCryptodome is stable and usable
 - Make sure PyQt is stable and usable
-- Verify how to use file explorer with Python (how to select, use and save image)
+- Verify how to use file explorer with Python (how to select, use and save file)
 - Make sure RobinDavid’s LSB-Steganography is stable and usable
+- 
 
 TODO today:
 - Give everyone access to Git Repo
