--- a/TODO
+++ b/TODO
@@ -1,11 +1,18 @@
 TODO for 06/08/2019:
 
-- Make sure PyCryptodome is stable and usable
-- Make sure PyQt is stable and usable
-- Verify how to use file explorer with Python (how to select, use and save file)
-- Make sure RobinDavid’s LSB-Steganography is stable and usable
-- 
+- Make sure PyCryptodome is stable and usable (Manuel)
+- Make sure PyQt is stable and usable (Ricardo)
+- Verify how to use file explorer with Python (Gabrielys)
+  - How to limit to file types that we need?
+  - How to save files using file explorer?
+  - How to select file?
+- Make sure RobinDavid’s LSB-Steganography is stable and usable (Kevin)
+- How to make text editor in python & hex-editor (Emilio)
+  - Hex-editor
+    - Left side byte
+    - Middle hex dump
+    - Right ASCII
 
 TODO today:
-- Give everyone access to Git Repo
-- Separation of duties
+- Give everyone access to Git Repo ()
+- Separation of duties (done)
