--- a/TODO
+++ b/TODO
@@ -14,5 +14,5 @@ TODO for 06/08/2019:
     - Right ASCII
 
 TODO today:
-- Give everyone access to Git Repo ()
+- Give everyone access to Git Repo (done)
 - Separation of duties (done)
