--- a/TODO
+++ b/TODO
@@ -13,6 +13,8 @@ TODO for 06/08/2019:
     - Middle hex dump
     - Right ASCII
 
-TODO today:
-- Give everyone access to Git Repo (done)
-- Separation of duties (done)
+TODO for 06/15/2019:
+
+-
+-
+-
