--- a/TODO
+++ b/TODO
@@ -15,6 +15,8 @@ TODO for 06/08/2019:
 
 TODO for 06/15/2019:
 
--
--
--
+- UI diagram and rest of part 2 of SRS (Kevin)
+- SPMP 5.2 (Ricardo) and the rest of his part
+- SPMP 5.3-5.4 (Manuel)
+- SPMP 5.5 (Gabrielys)
+- SPMP 5.1 (Emilio)
