Moved Wireframe.pdf to Documents and updated TODO

--- a/TODO
+++ b/TODO
@@ -20,3 +20,11 @@ TODO for 06/15/2019:
 - SPMP 5.3-5.4 (Manuel)
 - SPMP 5.5 (Gabrielys)
 - SPMP 5.1 (Emilio)
+
+TODO for 07/06/2019:
+
+- Encode/Decode Pane with Encryption algorithms (Manuel)
+- Language Decipher (Kevin)
+- Text Steg (Emilio)
+- File Explorer sending data to stegScript.py (Gabrielys)
+- Everything else mientras pueda (Ricardo)
