--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO for 06/08/2019:
 
+
 - Make sure PyCryptodome is stable and usable (Manuel)
 - Make sure PyQt is stable and usable (Ricardo)
 - Verify how to use file explorer with Python (Gabrielys)
@@ -28,3 +29,12 @@ TODO for 07/06/2019:
 - Text Steg (Emilio)
 - File Explorer sending data to stegScript.py (Gabrielys)
 - Everything else mientras pueda (Ricardo)
+
+TODO Presentation:
+
+- Introduccion/Objetios (Cual es la idea? Cual es el uso? Cual es la audiencia?) - Kevin
+- Diseño (Organizacion (flujo de datos)? Proposito?) - Manuel
+- Use cases (Proposito de cada funcion? Give example of use case and need.) - Kevin
+- Continuing Development (What's left? What has been done?) - Ricardo
+- Documentation Roadmap (What documentation has been done? What has been written in it? Talk about diagrams and their meaning. etc etc etc ) - Gabriely y Emilio
+
