Saturday meeting sept/7

--- a/TODO
+++ b/TODO
@@ -38,3 +38,7 @@ TODO Presentation:
 - Continuing Development (What's left? What has been done?) - Ricardo
 - Documentation Roadmap (What documentation has been done? What has been written in it? Talk about diagrams and their meaning. etc etc etc ) - Gabriely y Emilio
 
+
+TODO Software: 
+- Validate chosen file is png 
+- Implement Back buttons 
