Disabled algorithm comboBox and textEdit in the payload type selection pane

--- a/TODO
+++ b/TODO
@@ -40,10 +40,10 @@ TODO Presentation:
 
 
 TODO Software: 
-- Validate chosen file is png 
+- Validate chosen file is png (done) 
 - Implement Back buttons 
 - scrollable image (Scrollable area for image)
-- Encryption combo box disabled when encryption unchecked
+- Encryption combo box disabled when encryption unchecked (done)
 - When Encryption text is focused, delte text 
 - Delete Encrypted file after steganography is done 
 - If image is too large, display loading animation
